--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
   <title>Horizontal navigation</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/man.css" rel="stylesheet">
+  <ul class="cards">
+
+<head>
+  <h1>Planets<h1>
+    <nav>
+      <ul>
+      <li>Introduction</li>
+      <li>Terrestrial planets</li>
+      <li>Mars</li>
+      <li>Venus</li>
+      </ul>
+    </nav>
 </head>
-<body>
+
+  </ul>
 
 </body>
 </html>
