--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Planets</h1>
     <nav>
       <ul>
-        <li>Introduction</li>
-        <li>Terrestrial planets</li>
-        <li>Mars</li>
-        <li>Venus</li>
+        <li><a>Introduction</a></li>
+        <li><a>Terrestrial planets</a></li>
+        <li><a>Mars</a></li>
+        <li><a>Venus</a></li>
       </ul>
     </nav>
   </header>
