--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Planets</h1>
     <nav>
       <ul>
-        <li><a>Introduction</a></li>
-        <li><a>Terrestrial planets</a></li>
-        <li><a>Mars</a></li>
-        <li><a>Venus</a></li>
+        <li><a href="intro.html">Introduction</a></li>
+        <li><a href="Terrestrial.html">Terrestrial planets</a></li>
+        <li><a href="Mars.html">Mars</a></li>
+        <li><a href="Venus.html">Venus</a></li>
       </ul>
     </nav>
   </header>
