--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Horizontal navigation</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Bevan&display=swap" rel="stylesheet">
-  <link href="css/man.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
@@ -13,10 +13,10 @@
     <h1>Planets</h1>
     <nav>
       <ul>
-        <li><a href="intro.html">Introduction</a></li>
-        <li><a href="Terrestrial.html">Terrestrial planets</a></li>
-        <li><a href="Mars.html">Mars</a></li>
-        <li><a href="Venus.html">Venus</a></li>
+        <li><a class="intro" href="intro.html">Introduction</a></li>
+        <li><a class="ter" href="Terrestrial.html">Terrestrial planets</a></li>
+        <li><a class="mar" href="Mars.html">Mars</a></li>
+        <li><a class="ven" href="Venus.html">Venus</a></li>
       </ul>
     </nav>
   </header>
