--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
   <header>
-    <h1>Planets</h1>
+    <h1 class="p" href="Planets.html">Planets</h1>
     <nav>
       <ul>
-        <li><a class="intro" href="intro.html">Introduction</a></li>
-        <li><a class="ter" href="Terrestrial.html">Terrestrial planets</a></li>
-        <li><a class="mar" href="Mars.html">Mars</a></li>
-        <li><a class="ven" href="Venus.html">Venus</a></li>
+        <li><a class="p" href="introduction.html">Introduction</a></li>
+        <li><a class="p" href="Terrestrial.html">Terrestrial planets</a></li>
+        <li><a class="p" href="Mars.html">Mars</a></li>
+        <li><a class="p" href="Venus.html">Venus</a></li>
       </ul>
     </nav>
   </header>
