--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-    <h1 class="p" href="Planets.html">Planets</h1>
+    <h1>Planets</h1>
     <nav>
       <ul>
         <li><a class="p" href="introduction.html">Introduction</a></li>
