--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Planets</h1>
     <nav>
-      <ul>
+      <ul class="nav">
         <li><a class="p" href="introduction.html">Introduction</a></li>
         <li><a class="p" href="Terrestrial.html">Terrestrial planets</a></li>
         <li><a class="p" href="Mars.html">Mars</a></li>
