--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1>Planets</h1>
     <nav>
       <ul class="nav">
-        <li><a class="p" href="introduction.html">Introduction</a></li>
-        <li><a class="p" href="Terrestrial.html">Terrestrial planets</a></li>
-        <li><a class="p" href="Mars.html">Mars</a></li>
-        <li><a class="p" href="Venus.html">Venus</a></li>
+        <li><a href="#">Introduction</a></li>
+        <li><a href="#">Terrestrial planets</a></li>
+        <li><a href="#">Mars</a></li>
+        <li><a href="#">Venus</a></li>
       </ul>
     </nav>
   </header>
